--- a/src/gui/Commentaire.fxml
+++ b/src/gui/Commentaire.fxml
@@ -4,8 +4,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -115,12 +115,17 @@
       </HBox>
       <AnchorPane prefHeight="526.0" prefWidth="1025.0">
          <children>
-            <ListView fx:id="list" layoutX="70.0" layoutY="44.0" prefHeight="391.0" prefWidth="607.0" />
-            <ScrollBar layoutX="659.0" layoutY="44.0" orientation="VERTICAL" prefHeight="391.0" prefWidth="18.0" />
-            <Text fx:id="nomprod" layoutX="195.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="356.6708984375" />
+            <Text fx:id="nomprod" layoutX="195.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="356.6708984375" />
             <TextField fx:id="fild" layoutX="70.0" layoutY="463.0" onAction="#ajout" prefHeight="31.0" prefWidth="607.0" />
             <Button fx:id="comm" layoutX="766.0" layoutY="463.0" mnemonicParsing="false" onAction="#ajout" prefHeight="31.0" prefWidth="216.0" text="Commenter" />
             <ImageView fx:id="imgprod" fitHeight="312.0" fitWidth="249.0" layoutX="733.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
+            <TableView fx:id="tableC" layoutX="70.0" layoutY="64.0" prefHeight="363.0" prefWidth="607.0">
+              <columns>
+                <TableColumn fx:id="user" prefWidth="75.0" text="User" />
+                <TableColumn fx:id="comment" prefWidth="423.0" text="Commentaire" />
+                  <TableColumn fx:id="dat" prefWidth="108.0" text="Date" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </children>
