--- a/src/gui/Register.fxml
+++ b/src/gui/Register.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -15,14 +16,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.RegisterController">
    <children>
@@ -43,12 +36,12 @@
       </ImageView>
       <AnchorPane layoutX="384.0" layoutY="84.0" prefHeight="450.0" prefWidth="330.0" style="-fx-background-color: #8fc6c9;">
          <children>
-            <TextField fx:id="rusername" layoutX="24.0" layoutY="140.0" prefHeight="25.0" prefWidth="264.0" promptText="username" style="-fx-background-color: #;">
+            <TextField fx:id="rusername" layoutX="25.0" layoutY="168.0" prefHeight="25.0" prefWidth="264.0" promptText="username" style="-fx-background-color: #;">
                <effect>
                   <InnerShadow color="#1a4a72" />
                </effect>
             </TextField>
-            <PasswordField fx:id="rpassword" layoutX="25.0" layoutY="178.0" prefHeight="25.0" prefWidth="264.0" promptText="password">
+            <PasswordField fx:id="rpassword" layoutX="26.0" layoutY="210.0" prefHeight="25.0" prefWidth="264.0" promptText="password">
                <effect>
                   <InnerShadow color="#1a4a72" />
                </effect>
@@ -56,28 +49,47 @@
                   <Insets />
                </opaqueInsets>
             </PasswordField>
-            <Button layoutX="36.0" layoutY="303.0" mnemonicParsing="false" prefHeight="25.0" onAction="#Registration" prefWidth="242.0" style="-fx-background-color: #8fc6c9;" text="Register" textFill="#378dae">
+            <Button layoutX="36.0" layoutY="376.0" mnemonicParsing="false" onAction="#Registration" prefHeight="25.0" prefWidth="242.0" style="-fx-background-color: #8fc6c9;" text="Register" textFill="#378dae">
                <effect>
                   <InnerShadow />
                </effect>
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Label layoutX="129.0" layoutY="89.0" text="Register" textFill="#060111">
+            <Label layoutX="125.0" layoutY="14.0" text="Register" textFill="#060111">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             
-            <ComboBox fx:id="roleCombo" layoutX="129.0" layoutY="225.0" prefWidth="150.0" promptText="choose">
+            <ComboBox fx:id="roleCombo" layoutX="128.0" layoutY="295.0" prefWidth="150.0" promptText="choose">
             <items>
                 <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Client"  />
-          <String fx:value="Admin" />
+          <String fx:value="Client" />
+          <String fx:value="Magasin" />
+          <String fx:value="Association" />
+          <String fx:value="Livreur" />
+          <String fx:value="Veterinaire" />
+          <String fx:value="Dresseur" />
             </FXCollections>
              </items>
             </ComboBox>
-            <Label layoutX="25.0" layoutY="225.0" prefHeight="31.0" prefWidth="65.0" text="role" />
+            <Label layoutX="26.0" layoutY="295.0" prefHeight="31.0" prefWidth="65.0" text="role" />
+            <TextField fx:id="rname1" layoutX="25.0" layoutY="76.0" prefHeight="25.0" prefWidth="264.0" promptText="nom" style="-fx-background-color: #;">
+               <effect>
+                  <InnerShadow color="#1a4a72" />
+               </effect>
+            </TextField>
+            <TextField fx:id="rlastname2" layoutX="25.0" layoutY="122.0" prefHeight="25.0" prefWidth="264.0" promptText="prenom" style="-fx-background-color: #;">
+               <effect>
+                  <InnerShadow color="#1a4a72" />
+               </effect>
+            </TextField>
+            <TextField fx:id="remail1" layoutX="25.0" layoutY="255.0" prefHeight="25.0" prefWidth="264.0" promptText="e-mail" style="-fx-background-color: #;">
+               <effect>
+                  <InnerShadow color="#1a4a72" />
+               </effect>
+            </TextField>
          </children>
          <effect>
             <InnerShadow />
