--- a/src/gui/AjouterStore.fxml
+++ b/src/gui/AjouterStore.fxml
@@ -3,6 +3,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -156,13 +157,13 @@
                <children>
                   <TextField fx:id="nomproduit" layoutX="7.0" layoutY="98.0" />
                   <TextField fx:id="description" layoutX="7.0" layoutY="262.0" />
-                  <TextField fx:id="categorie" layoutX="7.0" layoutY="349.0" />
+                  <TextField fx:id="caracteristique" layoutX="7.0" layoutY="180.0" />
                   <Label layoutX="-12.0" layoutY="12.0" text="Ajout Produit" textFill="#ebebea">
                      <font>
                         <Font name="System Bold Italic" size="35.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="caracteristique" layoutX="9.0" layoutY="171.0" />
+                  <ComboBox fx:id="combobox" layoutX="7.0" layoutY="350.0" prefHeight="31.0" prefWidth="186.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0">
