--- a/src/gui/SessionEncheres.fxml
+++ b/src/gui/SessionEncheres.fxml
@@ -2,7 +2,10 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -110,7 +113,15 @@
       </HBox>
       <HBox prefHeight="529.0" prefWidth="1025.0">
          <children>
-            <Pane prefHeight="524.0" prefWidth="788.0" />
+            <Pane prefHeight="524.0" prefWidth="788.0">
+               <children>
+                  <TextArea fx:id="textarea" layoutX="462.0" layoutY="72.0" prefHeight="200.0" prefWidth="187.0" />
+                  <TextField fx:id="textfield" layoutX="481.0" layoutY="297.0" />
+                  <Button fx:id="send" layoutX="470.0" layoutY="344.0" mnemonicParsing="false" onAction="#SendMise" prefHeight="46.0" prefWidth="171.0" text="Mise" />
+                  <Label layoutX="462.0" layoutY="14.0" prefHeight="45.0" prefWidth="163.0" text="Les dernieres Mies :" />
+                  <Label layoutX="35.0" layoutY="28.0" text="Count Down" />
+                  <Pane fx:id="countDown" layoutX="35.0" layoutY="59.0" prefHeight="200.0" prefWidth="340.0" />
+               </children></Pane>
             <VBox prefHeight="524.0" prefWidth="240.0">
                <opaqueInsets>
                   <Insets />
