--- a/src/gui/DetailEvent.fxml
+++ b/src/gui/DetailEvent.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -142,11 +143,22 @@
                         <Font name="System Bold Italic" size="17.0" />
                      </font>
                   </Label>
+                  <Button fx:id="butt" layoutX="153.0" layoutY="404.0" mnemonicParsing="false" onAction="#ReservAnnule" prefHeight="44.0" prefWidth="214.0" style="-fx-background-color: #00A2d3;" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
             <Pane layoutX="14.0" layoutY="25.0" prefHeight="462.0" prefWidth="494.0" style="-fx-border-color: #88888c; -fx-border-radius: 2em; -fx-border-width: 3;">
                <children>
-                  <ImageView fx:id="image1" fitHeight="437.0" fitWidth="458.0" layoutX="26.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="image1" fitHeight="385.0" fitWidth="442.0" layoutX="47.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="fbButt" layoutX="142.0" layoutY="404.0" mnemonicParsing="false" onAction="#FBClick" prefHeight="44.0" prefWidth="206.0" style="-fx-background-color: #3b5998;" text="Partager" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Button>
+                  <FontAwesomeIconView glyphName="FACEBOOK_SQUARE" glyphStyle="-fx-fill:#fff" layoutX="155.0" layoutY="438.0" size="3em" />
                </children>
             </Pane>
          </children>
